--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "tiagoquaini@gmail.com",
   "license": "AGPL-3.0",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7"
   }
 }
