--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Simple API gateway which receives an IP address and responds with the country name associated to it.",
   "scripts": {
     "start": "node src/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --coverage"
   },
   "author": "tiagoquaini@gmail.com",
   "license": "AGPL-3.0",
   "dependencies": {
     "express": "^4.18.2",
     "node-fetch": "^2.6.7"
+  },
+  "devDependencies": {
+    "jest": "^29.2.2",
+    "jest-when": "^3.5.2"
   }
 }
