--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "limiter": "^2.1.0",
     "node-fetch": "^2.6.7",
     "opossum": "^7.0.0"
   },
